# OpenLinePlanner

./: .gitignore  CHANGELOG.md  README.md
.github/workflows/: build_backend_docker.yml  build_frontend.yml  build_frontend_docker.yml  deploy-dev.yml  deploy-prod.yml  deploy_backend.yml
datatypes/: Cargo.toml
datatypes/src/: lib.rs  persistence.rs  streetgraph.rs
openlineplanner/: .env.development  .env.production  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.js
openlineplanner-backend/: .gitignore  Cargo.toml  Dockerfile  Settings.toml  docker-compose.yml
openlineplanner-backend/data/: Whatever.osm.pbf
openlineplanner-backend/src/: coverage.rs  datalayer.rs  error.rs  geometry.rs  main.rs  osm.rs  population.rs  station.rs
openlineplanner-backend/src/calculation/: coverage.rs  geometry.rs  mod.rs  population.rs  station.rs
openlineplanner-backend/src/layers/: merge.rs  mod.rs  osm.rs  overpass.rs  protomaps.rs  streetgraph.rs
openlineplanner-backend/src/layers/areas/: admin_area.rs  mod.rs  overpass.rs
openlineplanner-backend/src/layers/loading/: admin_area.rs  mod.rs  overpass.rs
openlineplanner-backend/src/middleware/: auth.rs  data.rs  mod.rs
openlineplanner-backend/src/persistence/: mod.rs
openlineplanner-backend/src/users/: mod.rs
openlineplanner-rs/: Cargo.toml  Settings.toml  residents.geojson
openlineplanner-rs/src/: coverage.rs  datalayer.rs  main.rs  overlay.rs  population.rs  station.rs
openlineplanner/src/: App.vue  main.js
openlineplanner/src/assets/: variables.scss
openlineplanner/src/assets/defaults/: lineTypes.json
openlineplanner/src/assets/style/: defaults.scss  variables.scss
openlineplanner/src/components/: ActionToolbar.vue  ColorPicker.vue  CoverageSelect.vue  DataSourceMap.vue  DataSourceMapLoading.vue  DataSourceMapOverlay.vue  DataSourcesList.vue  DataSourcesListEntry.vue  ExportLoader.vue  GithubCorner.vue  IconLine.vue  InteractiveMap.vue  LayerSelector.vue  LineAnalysisEntry.vue  LineAnalysisList.vue  LineElement.vue  LineList.vue  ListContainer.vue  LoaderAnimation.vue  MapAddStationPopup.vue  MapLinePoint.vue  MapStationCharts.vue  MapStationPopup.vue  NavigationBar.vue  OLPLogo.vue  OverlaySelect.vue  PageFooter.vue  PageHeader.vue  PageLogo.vue  ReferenceMarker.vue  ReferenceMarkerPopup.vue  SavesList.vue  TextButton.vue  TextInput.vue  ToggleButton.vue  TooltipButton.vue  TypeIcon.vue  TypePicker.vue  ViewSettings.vue  WelcomeOverlay.vue  (+1 more)
openlineplanner/src/helpers/: api.js  file.js  geometry.js  random.js  time.js
openlineplanner/src/helpers/classes/: LinePoint.js  LinePoints.js  TransportLine.js
openlineplanner/src/router/: index.js
openlineplanner/src/stores/: data.js  editing.js  lines.js  overlay.js  pax.js  saves.js  ui.js
openlineplanner/src/views/: DataSourcesView.vue  HomeView.vue  LineInfo.vue  PlanningView.vue  ProjectView.vue  TimetableView.vue
openlineplanner_backend/: Dockerfile  README.md  docker-compose.yml  main.py  processing.py  requirements.txt  schemas.py  server.py
openlineplanner_backend/config/: statics.py
openlineplanner_backend/geo_data/: Population_Groß-Enzersdorf.gpkg  centroids_Groß-Enzersdorf.gpkg
openlineplanner_backend/geo_data/jobs/: jobs-Groß-Enzersdorf.gpkg
openlineplanner_backend/geo_data/residence/: centroids_Groß-Enzersdorf.gpkg
openlineplanner_backend/geo_data/schools/: schools_Groß-Enzersdorf.gpkg
openlineplanner_backend/helpers/: geodata.py  geometry.py  path.py  relations.py  sectors.py
openlineplanner_backend/tests/: optimalStation.py  passengerToStation.py
openlineplanner_backend/tests/snapshots/: snap_optimalStation.py  snap_passengerToStation.py
tools/regionalextracts/: Cargo.toml
tools/regionalextracts/src/: admin_area.rs  main.rs  overpass.rs  processing.rs
