[package]
name = "datatypes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
postcard = { version = "1.0.4", features = ["alloc"] }
serde = { version = "1.0.164", features = ["derive"] }
openhousepopulator = { rev = "0.2.5", git ="https://github.com/xatellite/OpenHousePopulator" }
geo = "0.25.0"
osmpbfreader = "0.16.0"
petgraph = "0.6.3"

