[package]
name = "openlineplanner-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.0"
anyhow = "1.0.69"
config = "0.13.3"
fern = { version = "0.6.1", features = ["colored"] }
geo = { version = "0.23.1", features = ["use-serde"] }
geojson = { version = "0.24.0", features = ["geo-types"] }
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
osmgraphing = "1.1.1"
osmpbfreader = "0.16.0"
petgraph = "0.6.3"
rand = "0.8.5"
tinytemplate = "1.2.1"
reqwest = { version = "0.11.16", features = ["json"] }
bytes = "1.4.0"
openhousepopulator = { rev = "v2.3", git ="https://github.com/xatellite/OpenHousePopulator" }
json = "0.12.4"
