[package]
name = "openlineplanner-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = { version = "4.3.0", features = ["rustls"] }
anyhow = "1.0.69"
config = "0.13.3"
fern = { version = "0.6.1", features = ["colored"] }
geo = { version = "0.23.1", features = ["use-serde"] }
geojson = { git = "https://github.com/zandemax/geojson", features = ["geo-types"] }
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
osmgraphing = "1.1.1"
osmpbfreader = "0.16.0"
petgraph = "0.6.3"
rand = "0.8.5"
tinytemplate = "1.2.1"
reqwest = { version = "0.11.16", features = ["json", "cookies", "rustls-tls"], default-features = false }
bytes = "1.4.0"
openhousepopulator = { rev = "v0.2.4", git ="https://github.com/xatellite/OpenHousePopulator" }
json = "0.12.4"
acc_reader = "2.0.0"
uuid = { version = "1.3.0", features = ["v4", "serde", "v5"] }
predicates = "3.0.3"
postcard = { version = "1.0.4", features = ["alloc"] }
rayon = "1.7.0"
datatypes = { path = "../datatypes" }
actix-web-httpauth = "0.8.0"
futures-util = "0.3.28"
jwtk = "0.2.4"
openssl-sys = { version = "0.9.65", features = ["vendored"] }