[package]
name = "openlineplanner-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
geo = { version = "0.23.1", features = ["use-serde"] }
serde = { version = "1.0.152", features = ["derive"] }
