[package]
name = "openlineplanner-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.0"
anyhow = "1.0.69"
geo = { version = "0.23.1", features = ["use-serde"] }
geojson = { version = "0.24.0", features = ["geo-types"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
